--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,54 @@
 ---
 # Role default lower priority variables
+iptables_zones:
+  - SERVICE:
+    - interfaces:
+      - service-01
+    - open_services:
+      - service_name: ssh
+        src_net:
+        multiple: no
+        ports: 22
+
+  - MANAGEMENT:
+    - interfaces:
+      - mgmt-01
+    - open_services:
+      - service_name: ssh
+        src_net:
+        multiple: no
+        ports: 22
+
+  - MONITORING:
+    - interfaces:
+      - monitor-01
+    - open_services:
+      - service_name: checkMK
+        src_net:
+        multiple: no
+        ports: 6556
+
+  - BACKUP:
+    - interfaces:
+      - backup-01
+    - open_services:
+      - service_name: Bacula
+        src_net:
+        multiple: no
+        ports: 9101
+
+      - service_name: Tivoli Storage Manager
+        src_net:
+        multiple: yes
+        ports: 1500:1501,1552:1553,1581
+
+- NAS:
+  - interfaces:
+    - nas-01
+  - open_services:
+
+- SAN:
+  - interfaces:
+    - san-01
+  - open_services:
+    
