--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,50 +1,61 @@
 ---
 # Role default lower priority variables
+open_services_SERVICE:
+  - service_name: ssh
+    src_net:
+    multiple: no
+    ports: 22
+
+open_services_MANAGEMENT:
+  - service_name: ssh
+    src_net:
+    multiple: no
+    ports: 22
+
+open_services_MONITORING:
+  - service_name: checkMK
+    src_net:
+    multiple: no
+    ports: 6556
+
+open_services_BACKUP:
+  - service_name: Bacula
+    src_net:
+    multiple: no
+    ports: 9101
+
+  - service_name: Tivoli Storage Manager
+    src_net:
+    multiple: yes
+    ports: 1500:1501,1552:1553,1581
+
+
 iptables_zones:
   - SERVICE:
     - name: SERVICE
     - interfaces:
       - service-01
-    - open_services:
-      - service_name: ssh
-        src_net:
-        multiple: no
-        ports: 22
+    - open_services: {{ open_services_SERVICE }}
+
 
   - MANAGEMENT:
     - name: MANAGEMENT
     - interfaces:
       - mgmt-01
-    - open_services:
-      - service_name: ssh
-        src_net:
-        multiple: no
-        ports: 22
+    - open_services: {{ open_services_MANAGEMENT }}
 
   - MONITORING:
     -name: MONITORING
     - interfaces:
       - monitor-01
-    - open_services:
-      - service_name: checkMK
-        src_net:
-        multiple: no
-        ports: 6556
+    - open_services: {{ open_services_MONITORING }}
+
 
   - BACKUP:
     - name: BACKUP
     - interfaces:
       - backup-01
-    - open_services:
-      - service_name: Bacula
-        src_net:
-        multiple: no
-        ports: 9101
-
-      - service_name: Tivoli Storage Manager
-        src_net:
-        multiple: yes
-        ports: 1500:1501,1552:1553,1581
+    - open_services: {{ open_services_BACKUP }}
 
   - NAS:
     - name: NAS
