--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,6 @@
 ---
 # Role tasks
+- name: Create iptables-rules file
+  template:
+    src: iptables-rules_template.j2
+    dest: /home/jmouron/iptables-rules
