--- a/test/main.yml
+++ b/test/main.yml
@@ -1,2 +1,8 @@
 ---
 # Tasks for tesing role
+- name: test iptables role
+  hosts: localhost
+  roles:
+    - amtega.iptables
+  tags:
+    - idempotence
