Fixed custom rules vatriables

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,16 @@
 ---
 # Role default lower priority variables
 open_services_SERVICE:
+  - service_name: ssh
+    src_net:
+    multiple: no
+    ports: 22
 
 open_services_MANAGEMENT:
+  - service_name: ssh
+    src_net:
+    multiple: no
+    ports: 22
 
 open_services_MONITORING:
   - service_name: checkMK
@@ -24,6 +32,7 @@ open_services_BACKUP:
 custom_INPUT_rules:
 custom_INPUT_SERVICE_rules:
 custom_INPUT_MANAGEMENT_rules:
+custom_INPUT_MONITORING_rules:
 custom_INPUT_BACKUP_rules:
 custom_INPUT_NAS_rules:
 custom_INPUT_SAN_rules:
@@ -33,43 +42,22 @@ iptables_zones:
   - name: SERVICE
     interfaces:
       - service-01
-    open_services:
-      - service_name: ssh
-        src_net:
-        multiple: no
-        ports: 22
+    open_services: "{{ open_services_SERVICE }}"
 
   - name: MANAGEMENT
     interfaces:
       - mgmt-01
-    open_services:
-      - service_name: ssh
-        src_net:
-        multiple: no
-        ports: 22
+    open_services: "{{ open_services_MANAGEMENT }}"
 
   - name: MONITORING
     interfaces:
       - monitor-01
-    open_services:
-      - service_name: checkMK
-        src_net:
-        multiple: no
-        ports: 6556
+    open_services: "{{ open_services_MONITORING }}"
 
   - name: BACKUP
     interfaces:
       - backup-01
-    open_services:
-      - service_name: Bacula
-        src_net:
-        multiple: no
-        ports: 9101
-
-      - service_name: Tivoli Storage Manager
-        src_net:
-        multiple: yes
-        ports: 1500:1501,1552:1553,1581
+    open_services: "{{ open_services_BACKUP }}"
 
   - name: NAS
     interfaces:
