--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -9,28 +9,46 @@
 # Both RedHat and CentOS if version >= 7 (sytemd based OS)
 #   -iptables-services
 
-name: install iptables package
-package:
-  name: iptables
-  state: present
+- name: install iptables package
+  package:
+    name: iptables
+    state: present
 
-name: install iptables-ipv6 package for RedHat
-package:
-  name: iptables-ipv6
-  state: present
-when: ansible_distribution == "RedHat"
+- name: install iptables-ipv6 package for RedHat
+  package:
+    name: iptables-ipv6
+    state: present
+  when: ansible_distribution == "RedHat"
 
-name: install iptables-services package for sytemd based OS
-package:
-  name: iptables-services
-  state: present
-when:
-    - ansible_distribution in ["RedHat", "CentOS"]
-    - ansible_distribution_version | version_compare('7', '>=')
+- name: install iptables-services package for sytemd based OS
+  package:
+    name: iptables-services
+    state: present
+  when: ansible_distribution_version | version_compare('7', '>=')
+
+- name: Disable firewalld form systemd services
+  systemd:
+    name: firewalld
+    enabled: no
+    state: stopped
+    masked: yes
+  when: ansible_distribution_version | version_compare('7', '>=')
+
+- name: Remove package system-config-firewall
+  package:
+    name: system-config-firewall
+    state: absent
+  when: ansible_distribution_version | version_compare('7', '>=')
+
+- name: Ensure system-config-firewall package will not be installed by yum update
+  lineinfile:
+    path: /etc/yum.conf
+    regexp: '^exclude='
+    line: 'exclude=system-config-firewall'
+  when: ansible_distribution_version | version_compare('7', '>=')
 
 - name: Enable iptables service
-  sudo: yes
   service:
-    name=iptables
-    enabled=yes
-    state=started
+    name: iptables
+    enabled: yes
+    state: started
