--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,9 +2,9 @@
 - name: Create iptables-config file
   template:
     src: iptables-config_template.j2
-    dest: {{ iptables_config_dest }}
+    dest: "{{ iptables_config_dest }}"
 
 - name: Create iptables-rules file
   template:
     src: iptables-rules_template.j2
-    dest: {{ iptables_rules_dest }}
+    dest: "{{ iptables_rules_dest }}"
