--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,3 +3,5 @@
 iptables_config_dest: /etc/sysconfig/iptables-config
 iptables_rules_dest: /etc/sysconfig/iptables-rules
 iptables_save_dest: /etc/sysconfig/iptables
+logrotate_config_fw_dest: /etc/logrotate.d/firewall
+rsyslog_config_fw_dest: /etc/rsyslog.d/firewall.conf
