Add task for rsyslog an logrotare firewall configuration

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,3 +8,6 @@
 
 - name: setup iptables service
   include_tasks: service.yml
+
+- name: configure logs for firewall
+  include_tasks: configlog.yml
