Move load/save iptables config fron task to handler for idempotence

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,9 @@
 ---
 # Role handlers
+
+
+- name: Restore iptables rules fron template file
+  shell: iptables-restore {{ iptables_rules_dest }}
+
+- name: Save iptables rules
+  shell: iptables-save > {{ iptables_save_dest }}
