--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,5 +9,5 @@
     src: iptables-rules_template.j2
     dest: "{{ iptables_rules_dest }}"
   notify:
-    - Restore iptables rules fron template file
-    - Save iptables rules
+    - iptables Restore rules from template file
+    - iptables Save rules
