Fix idempotence for rsyslog

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -13,3 +13,9 @@
     name: iptables
     state: restarted
     enabled: yes
+
+- name: iptables Reload rsyslog service
+  service:
+    name: rsyslog
+    state: restarted
+    enabled: yes
