--- a/test/main.yml
+++ b/test/main.yml
@@ -1,9 +1,35 @@
 ---
 # Tasks for testing role
 
-- name: test iptables role
-  hosts: CentOS
+- name: configure vagrant sandbox environment
+  hosts: localhost
   roles:
-    - amtega.iptables
+    - role: amtega.vagrant_presets
+      vagrant_presets_boxes_json_query: >-
+        [? starts_with(name, `centos-6`)
+           || starts_with(name, `centos-7`)
+           || starts_with(name, `fedora-27`)
+           || starts_with(name, `fedora-28`) ]
   tags:
-    - idempotence
+    - sandbox
+
+- name: run idempotence test
+  hosts: localhost
+  roles:
+    - role: amtega.vagrant_sandbox
+      vagrant_sandbox_state: started
+  tags:
+    - sandbox
+
+- name: test iptables role
+  hosts: vagrant_sandbox_vms
+  roles:
+    - role: amtega.iptables
+
+- name: cleanup vagrant sandbox
+  hosts: localhost
+  roles:
+    - role: amtega.vagrant_sandbox
+      vagrant_sandbox_state: absent
+  tags:
+    - sandbox
