--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,49 +1,26 @@
+---
+# Role dependencies
+
 galaxy_info:
   role_name: iptables
   author: José Enrique Mourón Regueira
-  description: role to configure a iptables based firewall segmented by zones
+  description: Setup an iptables based firewall segmented by zones
   company: AMTEGA - Xunta de Galicia
-
-  # If the issue tracker for your role is not on github, uncomment the
-  # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
-
   license: GPLv3 or EUPL
-
-  min_ansible_version: 2.4
-
-  # Optionally specify the branch Galaxy will use when accessing the GitHub
-  # repo for this role. During role install, if no tags are available,
-  # Galaxy will use this branch. During import Galaxy will access files on
-  # this branch. If travis integration is cofigured, only notification for this
-  # branch will be accepted. Otherwise, in all cases, the repo's default branch
-  # (usually master) will be used.
-  #github_branch:
-
-  #
-  # Below are all platforms currently available. Just uncomment
-  # the ones that apply to your role. If you don't see your
-  # platform on this list, let us know and we'll get it added!
-  #
+  min_ansible_version: 2.7
   platforms:
-    - name: EL
-      versions:
-        - 6
-        - 7
-
+  - name: Fedora
+    versions:
+      - 27
+      - 28
+  - name: EL
+    versions:
+      - 6
+      - 7
   galaxy_tags:
     - network
     - iptables
     - firewall
-    # List tags for your role here, one per line. A tag is
-    # a keyword that describes and categorizes the role.
-    # Users find roles by searching for tags. Be sure to
-    # remove the '[]' above if you add tags to this list.
-    #
-    # NOTE: A tag is limited to a single word comprised of
-    # alphanumeric characters. Maximum 20 tags per role.
+    - security
 
-dependencies: []
-  # List your role dependencies here, one per line.
-  # Be sure to remove the '[]' above if you add dependencies
-  # to this list.
+  dependencies: []
