--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,48 +1,34 @@
+---
+# Role install tasks
 
+- block:
+    - name: remove obsolete operating system packages
+      package:
+        name: "{{ item }}"
+        state: absent
+      loop: >-
+        {{ oracle_jdbc_connector_obsolete_os_packages[distro_packages_key] }}
 
-# Install required packages
-# RedHat:
-#   -iptables
-#   -iptables-ipv6
-# CentOs:
-#   -iptables
-# Both RedHat and CentOS if version >= 7 (sytemd based OS)
-#   -iptables-services
+    - name: ensure obsolete packages will not be installed by a yum/dnf update
+      lineinfile:
+        path: /etc/yum.conf
+        regexp: '^exclude='
+        line: 'exclude="{{ item }}"'
+      loop: >-
+        {{ oracle_jdbc_connector_obsolete_os_packages[distro_packages_key] }}
 
-- name: install iptables package
-  package:
-    name: iptables
-    state: present
-
-- name: install iptables-ipv6 package for RedHat
-  package:
-    name: iptables-ipv6
-    state: present
-  when: ansible_distribution == "RedHat"
-
-- name: install iptables-services package for sytemd based OS
-  package:
-    name: iptables-services
-    state: present
-  when: ansible_distribution_version is version_compare('7', '>=')
-
-- name: Disable firewalld form systemd services
-  systemd:
-    name: firewalld
-    enabled: no
-    state: stopped
-    masked: yes
-  when: ansible_distribution_version is version_compare('7', '>=')
-
-- name: Remove package system-config-firewall
-  package:
-    name: system-config-firewall
-    state: absent
-  when: ansible_distribution_version is version_compare('7', '>=')
-
-- name: Ensure system-config-firewall package will not be installed by yum update
-  lineinfile:
-    path: /etc/yum.conf
-    regexp: '^exclude='
-    line: 'exclude=system-config-firewall'
-  when: ansible_distribution_version is version_compare('7', '>=')
+    - name: install required operating system packages
+      package:
+        name: "{{ item }}"
+        state: present
+      loop: >-
+        {{ oracle_jdbc_connector_os_packages[distro_packages_key] }}
+  environment: "{{ oracle_jdbc_connector_http_proxy_environment }}"
+  vars:
+    distro_packages_key: >-
+      {{ ansible_facts.distribution
+         | lower
+         + "_" + ansible_facts.distribution_major_version }}
+  tags:
+    - role::iptables
+    - role::iptables::install
