--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,1 +1,73 @@
 ---
+# Role variables
+
+# Supported distributions
+
+iptables_supported_distributions:
+  - centos
+  - fedora
+  - rhel
+
+# Supported distributions versions
+
+iptables_supported_versions:
+  centos: 6
+  fedora: 27
+  rhel: 6
+
+# Operating system packages to install
+
+iptables_os_packages:
+  centos_6:
+    - iptables
+
+  centos_7:
+    - iptables-services
+    - iptables
+
+  fedora_27:
+    - iptables-services
+    - iptables
+
+  fedora_28:
+    - iptables-services
+    - iptables
+
+  rhel_6:
+    - iptables
+    - iptables-ipv6
+
+  rhel_7:
+    - iptables-services
+    - iptables
+    - iptables-ipv6
+
+iptables_os_obsolete:
+  centos_6: []
+
+  centos_7:
+    - system-config-firewall
+
+  fedora_27:
+    - system-config-firewall
+
+  fedora_28:
+    - system-config-firewall
+
+  rhel_6: []
+
+  rhel_7:
+    - system-config-firewall
+
+# Proxy environment settings
+
+iptables_http_proxy_config:
+    http_proxy: "{{ iptables_http_proxy | default('') }}"
+    https_proxy: "{{ iptables_https_proxy | default('') }}"
+    http_no_proxy: "{{ iptables_no_proxy | default('') }}"
+
+iptables_http_proxy_environment: >-
+  {{ (iptables_http_proxy is defined
+      or iptables_https_proxy is defined
+      or iptables_no_proxy is defined)
+     | ternary(iptables_http_proxy_config, {}) }}
