--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,5 +6,6 @@
     - import_tasks: install.yml
     - import_tasks: configure.yml
     - import_tasks: service.yml
+    - import_tasks: cleanup.yml
   tags:
     - role::iptables
