--- a/test/main.yml
+++ b/test/main.yml
@@ -21,22 +21,42 @@
   tags:
     - sandbox
 
+- name: prepare some variables required by the tests
+  hosts: vagrant_sandbox_vms
+  tasks:
+    - name: setup some variables required by tests
+      set_fact:
+        iptables_zone_SERVICE:
+          name: SERVICE
+          interfaces: eth0
+          log: yes
+        iptables_service_ss:
+          name: ssh
+          ports: 22
+          zones: SERVICE
+  tags:
+    - idempotence
+
 - name: test iptables role
   hosts: vagrant_sandbox_vms
   roles:
     - role: amtega.iptables
   vars:
-    iptables_zones:
-      - name: SERVICE
-        interfaces:
-          - eth0
-
     iptables_services:
-      - name: ssh
+      - name: http
+        protocol: tcp
         ports:
-          - 22
-          - "{{ ansible_port }}"
+          - 80
+          - 8080
+        zones:
+          - SERVICE
+
+      - name: dns
+        protocol: udp
+        ports: 53
         zones: SERVICE
+  tags:
+    - idempotence
 
 - name: cleanup vagrant sandbox
   hosts: localhost
