--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,4 +23,9 @@ galaxy_info:
     - firewall
     - security
 
-  dependencies: []
+dependencies:
+  - role: amtega.check_platform
+    check_platform_distributions:
+      centos: 6
+      fedora: 27
+      rhel: 6
